[package]
name = "kclvm-cmd"
version = "0.8.3"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = "4.3.0"
compiler_base_session = {path = "../../compiler_base/session"}

kclvm-api = {path = "../api"}
kclvm-parser = {path = "../parser"}
kclvm-runner = {path = "../runner"}
kclvm-config = {path = "../config"}
kclvm-driver = {path = "../driver"}
kclvm-runtime = {path = "../runtime"}
kclvm-tools = {path = "../tools"}
kclvm-error = {path = "../error"}
kclvm-version = {path = "../version"}
