[package]
name = "kclvm-cmd"
version = "0.9.0-alpha.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = "4.3.0"
compiler_base_session = "0.1.3"

kclvm-api = {path = "../api"}
kclvm-parser = {path = "../parser"}
kclvm-runner = {path = "../runner"}
kclvm-config = {path = "../config"}
kclvm-driver = {path = "../driver"}
kclvm-runtime = {path = "../runtime"}
kclvm-tools = {path = "../tools"}
kclvm-error = {path = "../error"}
kclvm-version = {path = "../version"}
