[package]
name = "kcl-cmd"
version = "0.11.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = "4.3.0"
compiler_base_session = "0.1.3"

kcl-api = {path = "../api"}
kcl-parser = {path = "../parser"}
kcl-runner = {path = "../runner"}
kcl-config = {path = "../config"}
kcl-driver = {path = "../driver"}
kcl-runtime = {path = "../runtime"}
kcl-tools = {path = "../tools"}
kcl-error = {path = "../error"}
kcl-version = {path = "../version"}
