[package]
name = "kclvm-config"
version = "0.8.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.32"
serde_json = "1.0"
indexmap = "1.0"
ahash = "0.7.2"
toml = "0.5.8"
ron = "0.7.0"
chrono = "0.4.19"
glob = "0.3.0"
fslock = "0.2.1"
pathdiff = "0.2.1"
anyhow = "1.0"

kclvm-version = {path = "../version"}
kclvm-utils = {path = "../utils"}
kclvm-ast = {path = "../ast"}
dirs = "5.0.0"
pcre2 = "0.2.4"
md-5 = "0.8.0"
