[package]
name = "kcl-config"
version = "0.11.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = {path = "../third-party/serde_yaml"}
serde_json = "1.0"
toml = "0.5.8"
ron = "0.7.0"
chrono = "0.4.19"
glob = "0.3.0"
pathdiff = "0.2.1"
anyhow = "1.0"

kcl-version = {path = "../version"}
kcl-utils = {path = "../utils"}
kcl-ast = {path = "../ast"}
dirs = "5.0.0"
md-5 = "0.8.0"
regex = "1.10.4"
url = "2.5.4"
